feat: reconcile accidental context across edits
- Disable line select, lyric select and pitch drag during paste mode so a
  press cannot both change the selection and be consumed by placement
- Stop the backward accidental scan at any barline or repeat, escaping the
  barrier through a tie whose anchor lies before it, and introduce
  keyInEffectAt as the seam for mid-line key changes (refs #675)
- Add AccidentalReconciliation, a pure pre-mutation unit returning the notes
  that must be given an explicit accidental so no untouched note changes
  pitch, and AccidentalMaterializer, the shared apply-gate-restore helper
- Carry each element's source-context accidental on Fragment and zero the
  clones' xOffset, so a fragment travels as semantic content
- Wire reconciliation into single insert, single and range delete, paste,
  the accidental toggle and pitch shift (refs #676)
- Add calculateModification and gate applyActionToSelection with it, so an
  infeasible line is refused at mutation time instead of failing to render
- Clear a moved note's explicit accidental once its staff position changes