@@ -23,6 +23,8 @@ package songscribe.ui.clipboard;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import org.junit.jupiter.api.AfterEach;
@@ -73,7 +75,7 @@ class ClipboardManagerTest extends UnitTest {
     @Test
     void testSetFragmentReplacesTheCurrentFragment() {
         var note = ElementType.CROTCHET.newInstance();
-        var fragment = new Fragment(List.of(note), List.of());
+        var fragment = new Fragment(List.of(note), Collections.singletonList(null), List.of());
 
         clipboardManager.setFragment(fragment);
 
@@ -84,9 +86,12 @@ class ClipboardManagerTest extends UnitTest {
 
     @Test
     void testSetFragmentAgainReplacesThePreviousOne() {
-        var first = new Fragment(List.of(ElementType.CROTCHET.newInstance()), List.of());
+        var first = new Fragment(
+            List.of(ElementType.CROTCHET.newInstance()), Collections.singletonList(null), List.of()
+        );
         var second = new Fragment(
-            List.of(ElementType.QUAVER.newInstance(), ElementType.MINIM.newInstance()), List.of()
+            List.of(ElementType.QUAVER.newInstance(), ElementType.MINIM.newInstance()),
+            Arrays.asList(null, null), List.of()
         );
 
         clipboardManager.setFragment(first);
@@ -98,7 +103,11 @@ class ClipboardManagerTest extends UnitTest {
 
     @Test
     void testClearEmptiesTheClipboard() {
-        clipboardManager.setFragment(new Fragment(List.of(ElementType.CROTCHET.newInstance()), List.of()));
+        clipboardManager.setFragment(
+            new Fragment(
+                List.of(ElementType.CROTCHET.newInstance()), Collections.singletonList(null), List.of()
+            )
+        );
 
         clipboardManager.clear();
 
@@ -109,7 +118,11 @@ class ClipboardManagerTest extends UnitTest {
 
     @Test
     void testSetFragmentPostsClipboardDidChangeNotificationExactlyOnce() {
-        clipboardManager.setFragment(new Fragment(List.of(ElementType.CROTCHET.newInstance()), List.of()));
+        clipboardManager.setFragment(
+            new Fragment(
+                List.of(ElementType.CROTCHET.newInstance()), Collections.singletonList(null), List.of()
+            )
+        );
 
         assertThat(listener.received)
             .as("setFragment must post exactly one ClipboardDidChangeNotification")
@@ -118,7 +131,11 @@ class ClipboardManagerTest extends UnitTest {
 
     @Test
     void testClearPostsClipboardDidChangeNotificationExactlyOnce() {
-        clipboardManager.setFragment(new Fragment(List.of(ElementType.CROTCHET.newInstance()), List.of()));
+        clipboardManager.setFragment(
+            new Fragment(
+                List.of(ElementType.CROTCHET.newInstance()), Collections.singletonList(null), List.of()
+            )
+        );
         // Discard the notification from the setFragment above so only clear()'s post is counted.
         listener.received.clear();
 
